RESOLVED FIXED302946
REGRESSION(303330@main): fast/multicol/crash-in-vertical-writing-mode.html hits assert
https://bugs.webkit.org/show_bug.cgi?id=302946
Summary REGRESSION(303330@main): fast/multicol/crash-in-vertical-writing-mode.html hi...
Antti Koivisto
Reported 2025-11-21 07:32:11 PST
boom
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-21 07:32:30 PST
Antti Koivisto
Comment 2 2025-11-21 07:35:44 PST
EWS
Comment 3 2025-11-21 09:25:15 PST
Committed 303395@main (e2b4d1810da2): <https://commits.webkit.org/303395@main> Reviewed commits have been landed. Closing PR #54320 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.