REGRESSION(303330@main): fast/multicol/crash-in-vertical-writing-mode.html hits assert https://bugs.webkit.org/show_bug.cgi?id=302946 rdar://165210638

Reviewed by Alan Baradlay.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeLineAdjustmentForPagination):

There was a copypasta error in the patch.

Canonical link: https://commits.webkit.org/303395@main